syntax = "proto3";
package test;

// A test message.
message Fake {
  // A singular field tag = 1
  double f_double = 1;

  // A singular field tag = 2
  float f_float = 2;

  // A singular field tag = 3
  int64 f_int64 = 3;

  // A singular field tag = 4
  uint64 f_uint64 = 4;

  // A singular field tag = 5
  int32 f_int32 = 5;

  // A singular field tag = 6
  fixed64 f_fixed64 = 6;

  // A singular field tag = 7
  fixed32 f_fixed32 = 7;

  // A singular field tag = 8
  bool f_bool = 8;

  // A singular field tag = 9
  string f_string = 9;

  // A singular field tag = 12
  bytes f_bytes = 12;

  // A singular field tag = 13
  uint32 f_uint32 = 13;

  // A singular field tag = 15
  sfixed32 f_sfixed32 = 15;

  // A singular field tag = 16
  sfixed64 f_sfixed64 = 16;

  // A singular field tag = 17
  sint32 f_sint32 = 17;

  // A singular field tag = 18
  sint64 f_sint64 = 18;
}
